tests/th/TH_NestedSplicesFail5.stderr
TH_NestedSplicesFail5.hs:4:10: error: [GHC-59185]
    • Template Haskell brackets cannot be nested (without intervening splices)
    • In the Template Haskell quotation: [| 'r' |]
      In the Template Haskell quotation: [| [| 'r' |] |]

